Acceleration and Deceleration

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,6 +172,8 @@ MRUItem0=/Game/Levels/Level_1
 K2Node_FunctionEntry=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Inputs/IA_Acceleration.IA_Acceleration
+InputAction=
 
 [EditorStartup]
 LastLevel=/Game/Levels/Level_1
@@ -181,8 +183,10 @@ CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
@@ -1508,12 +1512,16 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.JumpMRU=/All/Game/Vehicles
-ContentBrowserDrawer.JumpMRU=/All/Game/Levels
+ContentBrowserDrawer.JumpMRU=/All/Game/Inputs
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetDialog.ZoomScale=0
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+AssetPropertyPicker.ZoomScale=0
 
 [DetailPropertyExpansion]
 MassSettings="\"Object.Mass\" "
@@ -1530,6 +1538,9 @@ BoxComponent="\"Object\" "
 HLODLayer="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
+InputAction="\"Object\" "
+DataAsset="\"Object\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" "
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2049,6 +2060,17 @@ K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 HLODLayer.HLOD=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+BP_Kart_C.Predefinito=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2173,9 +2195,11 @@ WmfMediaSettings=True
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Vehicles/BP_Kart
-MRUItem1=/Game/Levels/Level_1_HLOD0_Instancing
-MRUItem2=/Game/Levels/Level_1
+MRUItem1=/Game/Inputs/IMC_Vehicle
+MRUItem2=/Game/Inputs/IA_Acceleration
 MRUItem3=/Game/GM_Kart
+MRUItem4=/Game/Levels/Level_1_HLOD0_Instancing
+MRUItem5=/Game/Levels/Level_1
 
 [DetailCategoriesAdvanced]
 BoxComponent.Collision=False
@@ -2184,6 +2208,8 @@ BoxComponent.Collision=False
 /Game/Vehicles/BP_Kart.BP_Kart=1
 /Game/GM_Kart.GM_Kart=1
 /Game/Levels/Level_1_HLOD0_Instancing.Level_1_HLOD0_Instancing=1
+/Game/Inputs/IA_Acceleration.IA_Acceleration=1
+/Game/Inputs/IMC_Vehicle.IMC_Vehicle=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
