Laps Count and Finish Line

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,8 +216,8 @@ LastLevel=/Game/Levels/Level_1
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=StaticMeshEditor
@@ -228,6 +228,7 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/Vehicles/BP_Kart.BP_Kart
+OpenAssetsAtExit=/Game/BP_FinishLine.BP_FinishLine
 
 [RootWindow]
 ScreenPosition=X=591.000 Y=126.000
@@ -1540,7 +1541,7 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Vehicles
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -1563,9 +1564,9 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Inputs
 ContentBrowserDrawer.JumpMRU=/All/Game/Vehicles
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
+ContentBrowserDrawer.JumpMRU=/All/Game/Inputs
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels/_GENERATED/giorg
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels/_GENERATED
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Materials
@@ -2471,6 +2472,17 @@ BP_TrackSpline_C.TransformCommon=True
 BP_TrackSpline_C.Networking=True
 PropertyWrapper.Events=True
 K2Node_VariableSet.Events=True
+BP_FinishLine_C.Tick=True
+BP_FinishLine_C.Replication=True
+BP_FinishLine_C.Rendering=True
+BP_FinishLine_C.Collision=True
+BP_FinishLine_C.Actor=True
+BP_FinishLine_C.Input=True
+BP_FinishLine_C.HLOD=True
+BP_FinishLine_C.Physics=True
+BP_FinishLine_C.Events=True
+BP_FinishLine_C.TransformCommon=True
+BP_FinishLine_C.Networking=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2594,17 +2606,18 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Vehicles/BP_Kart
-MRUItem1=/Game/Levels/Level_1
-MRUItem2=/Game/BP_TrackSpline
-MRUItem3=/Game/Inputs/IMC_Vehicle
-MRUItem4=/Game/StarterContent/Shapes/Shape_WideCapsule
-MRUItem5=/Game/StarterContent/Props/MaterialSphere
-MRUItem6=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem7=/Game/Inputs/IA_Steering
-MRUItem8=/Game/Inputs/IA_Acceleration
-MRUItem9=/Game/GM_Kart
-MRUItem10=/Game/Levels/Level_1_HLOD0_Instancing
+MRUItem0=/Game/BP_FinishLine
+MRUItem1=/Game/Vehicles/BP_Kart
+MRUItem2=/Game/Levels/Level_1
+MRUItem3=/Game/BP_TrackSpline
+MRUItem4=/Game/Inputs/IMC_Vehicle
+MRUItem5=/Game/StarterContent/Shapes/Shape_WideCapsule
+MRUItem6=/Game/StarterContent/Props/MaterialSphere
+MRUItem7=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem8=/Game/Inputs/IA_Steering
+MRUItem9=/Game/Inputs/IA_Acceleration
+MRUItem10=/Game/GM_Kart
+MRUItem11=/Game/Levels/Level_1_HLOD0_Instancing
 
 [DetailCategoriesAdvanced]
 BoxComponent.Collision=False
@@ -2676,6 +2689,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_FinishLine.BP_FinishLine;
 RecentlyPlaced=/Game/BP_TrackSpline.BP_TrackSpline;
 RecentlyPlaced=/Game/Vehicles/BP_Kart.BP_Kart;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
