--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -203,6 +203,23 @@ IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 
+[WidgetTemplatesExpanded]
+Audio=False
+AudioMaterial=False
+Comune=True
+Editor=False
+Effetti speciali=False
+Elenchi=False
+Input=False
+Nessuna categoria=False
+Ottimizzazione=False
+Pannello=False
+Primitivo=False
+Sint=False
+Utente creato=False
+Varie=False
+Avanzato=False
+
 [DetailCustomWidgetExpansion]
 K2Node_FunctionEntry=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -216,6 +233,8 @@ LastLevel=/Game/Levels/Level_1
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -229,6 +248,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/Vehicles/BP_Kart.BP_Kart
 OpenAssetsAtExit=/Game/BP_FinishLine.BP_FinishLine
+OpenAssetsAtExit=/Game/UI/W_LapCount.W_LapCount
 
 [RootWindow]
 ScreenPosition=X=591.000 Y=126.000
@@ -1541,7 +1561,7 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -1563,6 +1583,7 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Vehicles
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
@@ -1787,6 +1808,15 @@ PolyEditCommonProperties="\"Object\" "
 PolyEditTopologyProperties="\"Object\" "
 EditMeshPolygonsToolActionPropertySet="\"Object\" "
 SplineComponent="\"Object\" "
+HorizontalBox="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+W_LapCount_C="\"Object\" "
+UserWidget="\"Object\" "
+CanvasPanel="\"Object\" "
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2474,7 +2504,7 @@ PropertyWrapper.Events=True
 K2Node_VariableSet.Events=True
 BP_FinishLine_C.Tick=True
 BP_FinishLine_C.Replication=True
-BP_FinishLine_C.Rendering=True
+BP_FinishLine_C.Rendering=False
 BP_FinishLine_C.Collision=True
 BP_FinishLine_C.Actor=True
 BP_FinishLine_C.Input=True
@@ -2483,6 +2513,48 @@ BP_FinishLine_C.Physics=True
 BP_FinishLine_C.Events=True
 BP_FinishLine_C.TransformCommon=True
 BP_FinishLine_C.Networking=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Rendering=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+W_LapCount_C.Layout=True
+W_LapCount_C.Appearance=True
+W_LapCount_C.Input=True
+W_LapCount_C.Accessibility=True
+W_LapCount_C.Interaction=True
+W_LapCount_C.Performance=True
+W_LapCount_C.Behavior=True
+W_LapCount_C.Render Transform=True
+W_LapCount_C.Rendering=True
+W_LapCount_C.Navigation=True
+W_LapCount_C.Localization=True
+W_LapCount_C.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+W_LapCount_C.Designer=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2606,23 +2678,26 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BP_FinishLine
-MRUItem1=/Game/Vehicles/BP_Kart
-MRUItem2=/Game/Levels/Level_1
-MRUItem3=/Game/BP_TrackSpline
-MRUItem4=/Game/Inputs/IMC_Vehicle
-MRUItem5=/Game/StarterContent/Shapes/Shape_WideCapsule
-MRUItem6=/Game/StarterContent/Props/MaterialSphere
-MRUItem7=/Game/StarterContent/Shapes/Shape_Cylinder
-MRUItem8=/Game/Inputs/IA_Steering
-MRUItem9=/Game/Inputs/IA_Acceleration
-MRUItem10=/Game/GM_Kart
-MRUItem11=/Game/Levels/Level_1_HLOD0_Instancing
+MRUItem0=/Game/UI/W_HUD
+MRUItem1=/Game/UI/W_LapCount
+MRUItem2=/Game/BP_FinishLine
+MRUItem3=/Game/Vehicles/BP_Kart
+MRUItem4=/Game/Levels/Level_1
+MRUItem5=/Game/BP_TrackSpline
+MRUItem6=/Game/Inputs/IMC_Vehicle
+MRUItem7=/Game/StarterContent/Shapes/Shape_WideCapsule
+MRUItem8=/Game/StarterContent/Props/MaterialSphere
+MRUItem9=/Game/StarterContent/Shapes/Shape_Cylinder
+MRUItem10=/Game/Inputs/IA_Steering
+MRUItem11=/Game/Inputs/IA_Acceleration
+MRUItem12=/Game/GM_Kart
+MRUItem13=/Game/Levels/Level_1_HLOD0_Instancing
 
 [DetailCategoriesAdvanced]
 BoxComponent.Collision=False
 BrushComponent.HLOD=False
 BrushComponent.Geometry=False
+TextBlock.Appearance=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Vehicles/BP_Kart.BP_Kart=1
@@ -2714,4 +2789,110 @@ InstalledPlugins=WMFCodecs
 
 [/Script/MeshPaintEditorMode.MeshPaintModeSettings]
 ColorViewMode=Normal
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+bCurveEditorVisible=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+TimeWarpDisplay=Both
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowInfoButton=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+bShowMarkedFrames=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+MarkedFrameColor=(R=0.000000,G=1.000000,B=1.000000,A=0.400000)
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+bRestoreOriginalViewportOnCameraCutUnlock=True
+TreeViewWidth=0.300000
+ViewDensity=Relaxed
+AssetBrowserWidth=500.000000
+AssetBrowserHeight=300.000000
+ColumnVisibilitySettings=(ColumnName="Indicator",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Pin",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Lock",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Solo",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Mute",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Label",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Edit",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Add",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Nav",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="KeyFrame",bIsVisible=False)
+ColumnVisibilitySettings=(ColumnName="ColorPicker",bIsVisible=True)
+SidebarState=(("UMGSequencerSettings", (DrawerStates=((DrawerId="SelectionDetails")))))
+TrackFilterBars=(("UMGSequencerSettings", ()))
+bIncludePinnedInFilter=False
+bAutoExpandNodesOnFilterPass=False
+bUseFilterSubmenusForCategories=False
+bFilterBarVisible=False
+LastFilterBarLayout=Horizontal
+LastFilterBarSizeCoefficient=0.000000
+ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
 
