Acceleration Ground Function Fixed

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -55,6 +55,7 @@ bEnableColorizedEditorTabs=True
 CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
+LastExecutedPlayModeType=PlayMode_Simulate
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -221,7 +222,7 @@ Varie=False
 Avanzato=False
 
 [DetailCustomWidgetExpansion]
-K2Node_FunctionEntry=
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.9EC34E1740C5337AD018998D0A3F2190
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
@@ -233,6 +234,7 @@ LastLevel=/Game/Levels/Level_1
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1562,7 +1564,7 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Vehicles
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -1584,8 +1586,8 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Vehicles
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Inputs
@@ -2337,7 +2339,7 @@ K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
-K2Node_CallFunction.Outputs=True
+K2Node_CallFunction.Outputs=False
 HLODLayer.HLOD=True
 InputAction.Description=True
 InputAction.Action=True
@@ -2732,6 +2734,7 @@ BrushComponent.Navigation=False
 /Game/BP_FinishLine.BP_FinishLine=1
 /Game/UI/W_LapCount.W_LapCount=1
 /Game/UI/W_HUD.W_HUD=1
+/Game/BP_BoostPads.BP_BoostPads=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2755,8 +2758,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2786,10 +2789,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Vehicles/BP_Kart.BP_Kart;
 RecentlyPlaced=/Game/BP_BoostPads.BP_BoostPads;
 RecentlyPlaced=/Game/BP_FinishLine.BP_FinishLine;
 RecentlyPlaced=/Game/BP_TrackSpline.BP_TrackSpline;
-RecentlyPlaced=/Game/Vehicles/BP_Kart.BP_Kart;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
