Reset Position and Remove AI

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,11 +235,11 @@ LastLevel=/Game/Levels/Level_1
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1586,9 +1586,9 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/Vehicles
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
-ContentBrowserDrawer.JumpMRU=/All/Game/Vehicles
 ContentBrowserDrawer.JumpMRU=/All/Game/Inputs
 ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game
@@ -1639,15 +1639,15 @@ ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
 [DetailPropertyExpansion]
 MassSettings="\"Object\" \"Object.Mass\" "
 DeveloperSettings="\"Object\" "
-Object="\"Object\" \"Object.Collision.BodyInstance\" "
+Object="\"Object\" "
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+BoxComponent="\"Object\" "
 HLODLayer="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
@@ -2741,12 +2741,12 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Vehicles/BP_Kart
-MRUItem1=/Game/Levels/Level_1
-MRUItem2=/Game/_Other/Shapes/Shape_Cylinder
-MRUItem3=/Game/_Other/Shapes/Shape_WideCapsule
-MRUItem4=/Game/Blueprints/BP_TrackSpline
-MRUItem5=/Game/Blueprints/BP_FinishLine
+MRUItem0=/Game/Blueprints/BP_FinishLine
+MRUItem1=/Game/Vehicles/BP_Kart
+MRUItem2=/Game/Levels/Level_1
+MRUItem3=/Game/_Other/Shapes/Shape_Cylinder
+MRUItem4=/Game/_Other/Shapes/Shape_WideCapsule
+MRUItem5=/Game/Blueprints/BP_TrackSpline
 MRUItem6=/Game/Blueprints/BP_BoostPads
 MRUItem7=/Game/UI/W_HUD
 MRUItem8=/Game/UI/W_LapCount
@@ -2764,6 +2764,7 @@ TextBlock.Appearance=False
 BrushComponent.Collision=False
 BrushComponent.Navigation=False
 BoxComponent.Physics=True
+K2Node_VariableGet.Variable=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Vehicles/BP_Kart.BP_Kart=1
@@ -2780,6 +2781,7 @@ BoxComponent.Physics=True
 /Game/UI/W_LapCount.W_LapCount=1
 /Game/UI/W_HUD.W_HUD=1
 /Game/BP_BoostPads.BP_BoostPads=1
+/Game/Blueprints/BP_FinishLine.BP_FinishLine=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2803,8 +2805,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2834,8 +2836,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/BP_BoostPads.BP_BoostPads;
 RecentlyPlaced=/Game/Vehicles/BP_Kart.BP_Kart;
+RecentlyPlaced=/Game/Blueprints/BP_BoostPads.BP_BoostPads;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/BP_BoostPads.BP_BoostPads;
 RecentlyPlaced=/Game/BP_FinishLine.BP_FinishLine;
